Prepare for Heroku.